--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 ---
 layout: default
 ---
+<!DOCTYPE html>
+<html>
+  
 <head>
 Joseph Tatro  
 <\head>
@@ -8,3 +11,4 @@ Joseph Tatro
 <body> 
   Hello World 
 <\body>
+<\html>
