--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@ layout: default
 ---  
 <!DOCTYPE html>
 <html>
-<head>
-Joseph Tatro  
-<head>
+  <head>
+    Joseph Tatro  
+  </head>
   
-<body> 
-  Hello World 
-<body>
-<html>
+  <body> 
+    Hello World 
+  </body>
+</html>
