--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 <!DOCTYPE html>
 <html>
   <head>
-    Joseph Tatro  
+    <title> Joseph Tatro <\title>  
   </head>
   
   <body> 
