--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@ layout: default
     <title> Joseph Tatro </title>  
   </head>
   
+  <h1> Joseph Tatro </h1>
+  
   <body> 
     Hello World 
   </body>
