--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@ layout: default
   <h1> Joseph Tatro </h1>
   
   <body> 
-    Hello World 
+    <ul>
+  <li><a href="#home">Home</a></li>
+  <li><a href="#cv">CV</a></li>
+  <li><a href="#research">Research</a></li>
+  <li><a href="#publications">Publications</a></li>
+  <li><a href="#teaching">Teaching</a></li>
+  <li><a href="#contact">Contact</a></li>
+</ul>
   </body>
 </html>
