--- a/index.html
+++ b/index.html
@@ -3,14 +3,21 @@ layout: default
 ---  
 <!DOCTYPE html>
 <html>
-  <head>
-    <title> Joseph Tatro </title>  
-  </head>
+<head>
+<style>
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+</style>    
+<title> Joseph Tatro </title>  
+</head>
   
   <h1> Joseph Tatro </h1>
   
-  <body> 
-    <ul>
+<body> 
+<ul>
   <li><a href="#home">Home</a></li>
   <li><a href="#cv">CV</a></li>
   <li><a href="#research">Research</a></li>
