--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@ ul {
   margin: 0;
   padding: 0;
 }
+li a {
+  display: block;
+  width: 60px;
+  background-color: #dddddd;
+}  
 </style>    
 <title> Joseph Tatro </title>  
 </head>
