--- a/index.html
+++ b/index.html
@@ -9,19 +9,30 @@ ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  width: 200px;
+  background-color: #f1f1f1;
 }
+
 li a {
   display: block;
-  width: 60px;
-  background-color: #dddddd;
-}  
-</style>    
+  color: #000;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+
+/* Change the link color on hover */
+li a:hover {
+  background-color: #555;
+  color: white;
+}
+</style>
+  
 <title> Joseph Tatro </title>  
 </head>
   
-  <h1> Joseph Tatro </h1>
-  
-<body> 
+ 
+<body>
+<h2> Navigation Bar </h2>
 <ul>
   <li><a href="#home">Home</a></li>
   <li><a href="#cv">CV</a></li>
@@ -30,5 +41,6 @@ li a {
   <li><a href="#teaching">Teaching</a></li>
   <li><a href="#contact">Contact</a></li>
 </ul>
-  </body>
+<p>This website is a work in progress.</p>
+</body>
 </html>
