--- a/index.html
+++ b/index.html
@@ -5,25 +5,62 @@ layout: default
 <html>
 <head>
 <style>
-ul {
+body {margin: 0;}
+
+ul.sidenav {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  width: 200px;
+  width: 25%;
   background-color: #f1f1f1;
+  position: fixed;
+  height: 100%;
+  overflow: auto;
 }
 
-li a {
+ul.sidenav li a {
   display: block;
   color: #000;
   padding: 8px 16px;
   text-decoration: none;
 }
+ 
+ul.sidenav li a.active {
+  background-color: #4CAF50;
+  color: white;
+}
 
-/* Change the link color on hover */
-li a:hover {
+ul.sidenav li a:hover:not(.active) {
   background-color: #555;
   color: white;
+}
+
+div.content {
+  margin-left: 25%;
+  padding: 1px 16px;
+  height: 1000px;
+}
+
+@media screen and (max-width: 900px) {
+  ul.sidenav {
+    width: 100%;
+    height: auto;
+    position: relative;
+  }
+  
+  ul.sidenav li a {
+    float: left;
+    padding: 15px;
+  }
+  
+  div.content {margin-left: 0;}
+}
+
+@media screen and (max-width: 400px) {
+  ul.sidenav li a {
+    text-align: center;
+    float: none;
+  }
 }
 </style>
   
@@ -33,14 +70,17 @@ li a:hover {
  
 <body>
 <h2> Navigation Bar </h2>
-<ul>
-  <li><a href="#home">Home</a></li>
+<ul class="sidenav">
+  <li><a class="active" href="#home">Home</a></li>
   <li><a href="#cv">CV</a></li>
   <li><a href="#research">Research</a></li>
   <li><a href="#publications">Publications</a></li>
   <li><a href="#teaching">Teaching</a></li>
   <li><a href="#contact">Contact</a></li>
 </ul>
+
+<div class="content">
 <p>This website is a work in progress.</p>
+</div>
 </body>
 </html>
