--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ layout: default
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 body {margin: 0;}
 
