--- a/index.html
+++ b/index.html
@@ -2,74 +2,14 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
-body {margin: 0;}
-
-ul.sidenav {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  width: 25%;
-  background-color: #f1f1f1;
-  position: fixed;
-  height: 100%;
-  overflow: auto;
-}
-
-ul.sidenav li a {
-  display: block;
-  color: #000;
-  padding: 8px 16px;
-  text-decoration: none;
-}
- 
-ul.sidenav li a.active {
-  background-color: #4CAF50;
-  color: white;
-}
-
-ul.sidenav li a:hover:not(.active) {
-  background-color: #555;
-  color: white;
-}
-
-div.content {
-  margin-left: 25%;
-  padding: 1px 16px;
-  height: 1000px;
-}
-
-@media screen and (max-width: 900px) {
-  ul.sidenav {
-    width: 100%;
-    height: auto;
-    position: relative;
-  }
-  
-  ul.sidenav li a {
-    float: left;
-    padding: 15px;
-  }
-  
-  div.content {margin-left: 0;}
-}
-
-@media screen and (max-width: 400px) {
-  ul.sidenav li a {
-    text-align: center;
-    float: none;
-  }
-}
-</style>
-  
 <title> Joseph Tatro </title>  
 </head>
   
  
 <body>
 <h2> Navigation Bar </h2>
-<ul class="sidenav">
-  <li><a class="active" href="#home">Home</a></li>
+<ul>
+  <li><a href="#home">Home</a></li>
   <li><a href="#cv">CV</a></li>
   <li><a href="#research">Research</a></li>
   <li><a href="#publications">Publications</a></li>
@@ -77,7 +17,7 @@ div.content {
   <li><a href="#contact">Contact</a></li>
 </ul>
 
-<div class="content">
+<div>
 <p>This website is a work in progress.</p>
 </div>
 </body>
