--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@ title: Joseph Tatro
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="utf-8">
+<title>{{ page.title }}</title>
 <style>
 body {margin: 0;}
 
