--- a/index.html
+++ b/index.html
@@ -2,87 +2,4 @@
 layout: default
 title: Joseph Tatro
 ---
-<!DOCTYPE html>
-<html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta charset="utf-8">
-<title>{{ page.title }}</title>
-<style>
-body {margin: 0;}
-
-ul.sidenav {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  width: 25%;
-  background-color: #f1f1f1;
-  position: fixed;
-  height: 100%;
-  overflow: auto;
-}
-
-ul.sidenav li a {
-  display: block;
-  color: #000;
-  padding: 8px 16px;
-  text-decoration: none;
-}
- 
-ul.sidenav li a.active {
-  background-color: #4CAF50;
-  color: white;
-}
-
-ul.sidenav li a:hover:not(.active) {
-  background-color: #555;
-  color: white;
-}
-
-div.content {
-  margin-left: 25%;
-  padding: 1px 16px;
-  height: 1000px;
-}
-
-@media screen and (max-width: 900px) {
-  ul.sidenav {
-    width: 100%;
-    height: auto;
-    position: relative;
-  }
-  
-  ul.sidenav li a {
-    float: left;
-    padding: 15px;
-  }
-  
-  div.content {margin-left: 0;}
-}
-
-@media screen and (max-width: 400px) {
-  ul.sidenav li a {
-    text-align: center;
-    float: none;
-  }
-}
-</style>
-</head>
-  
- 
-<body>
-<h2> Navigation Bar </h2>
-<ul class="sidenav">
-  <li><a class="active" href="#home">Home</a></li>
-  <li><a href="#cv">CV</a></li>
-  <li><a href="#research">Research</a></li>
-  <li><a href="#publications">Publications</a></li>
-  <li><a href="#teaching">Teaching</a></li>
-  <li><a href="#contact">Contact</a></li>
-</ul>
-
-<div class="content">
-<p>This website is a work in progress.</p>
-</div>
-</body>
-</html>
+<h1>{{ "Hello World!" | downcase }}</h1>
