--- a/index.html
+++ b/index.html
@@ -19,3 +19,4 @@ title: Joseph Tatro
   <p>You will learn more about media queries and responsive web design later in our CSS Tutorial.</p>
   <h3>Resize the browser window to see the effect.</h3>
 </div>
+</body>
