--- a/index.html
+++ b/index.html
@@ -7,16 +7,13 @@ title: Joseph Tatro
 
 <ul class="sidenav">
   <li><a class="active" href="#home">Home</a></li>
-  <li><a href="#news">News</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li><a href="#about">About</a></li>
+  <li><a href=/about.html>About</a></li>
+  <li><a href="/research.html">Research</a></li>
+  <li><a href="/publications.html">Publications</a></li>
+  <li><a href="/teaching.html">Teaching</a></li>
 </ul>
 
 <div class="content">
-  <h2>Responsive Sidenav Example</h2>
-  <p>This example use media queries to transform the sidenav to a top navigation bar when the screen size is 900px or less.</p>
-  <p>We have also added a media query for screens that are 400px or less, which will vertically stack and center the navigation links.</p>
-  <p>You will learn more about media queries and responsive web design later in our CSS Tutorial.</p>
-  <h3>Resize the browser window to see the effect.</h3>
+  <h2>This site is a work in progress.</h2>
 </div>
 </body>
