--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Joseph Tatro
 
 <ul class="sidenav">
   <li><a class="active" href="#home">Home</a></li>
-  <li><a href=/about.html>About</a></li>
+  <li><a href="/about.html">About</a></li>
   <li><a href="/research.html">Research</a></li>
   <li><a href="/publications.html">Publications</a></li>
   <li><a href="/teaching.html">Teaching</a></li>
