--- a/index.html
+++ b/index.html
@@ -6,14 +6,24 @@ title: Joseph Tatro
 <body>
 
 <ul class="sidenav">
-  <li><a class="active" href="#home">Home</a></li>
-  <li><a href="/about.html">About</a></li>
+  <li><a href="/">Home</a></li>
+  <li><a class="active" href="#about">About</a></li>
   <li><a href="/research.html">Research</a></li>
   <li><a href="/publications.html">Publications</a></li>
   <li><a href="/teaching.html">Teaching</a></li>
 </ul>
 
 <div class="content">
-  <h2>This site is a work in progress.</h2>
+  <p> I am a PhD student in my final year studying Applied Mathematics at Rensselaer Polytechnic Institute. My advisor is <a href="http://homepages.rpi.edu/~lair/">Rongjie Lai</a>. My research interests include: 
+  <ul>
+    <li> Machine learning </li>
+    <li> Optimization </li>
+    <li> Computational geometry </li>
+  </ul>
+  Overall, my work focuses on the learning of geometry and the geometry of learning. 
+  </p>
+  <p>
+  Starting with an internship at the Jaffe Lab for Underwater Imaging at UCSD, my professional experiences have been based in computer vision research. Currently, I am an IBM AI Horizons scholar working with Payel Das and other researchers at IBM Research.  
+  </p>
 </div>
 </body>
