--- a/index.html
+++ b/index.html
@@ -27,5 +27,18 @@ title: Joseph Tatro
   <p>
   Starting with an internship at the Jaffe Lab for Underwater Imaging at UCSD, my professional experiences have been based in computer vision research. Currently, I am an IBM AI Horizons scholar working with Payel Das and other researchers at IBM Research.  
   </p>
+  
+  For more information related to my work, see:
+  <ul>
+    <li> <a href="https://scholar.google.com/citations?user=jS3UIPgAAAAJ&hl=en"> Google Scholar </a> </li>
+    <li> <a href="https://github.com/tatron"> Github </a> </li>
+    <li> <a href="https://www.linkedin.com/in/joseph-tatro/"> LinkedIn </a> </li>  
+  </ul>
+  
+  I can be contacted by email (preferred) or phone:
+  <ul>
+  <li> njoseph.tatro@gmail.com </li>
+  <li> 254-462-8245 </li>
+  </ul>
 </div>
 </body>
