--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ title: Joseph Tatro
 
 <ul class="sidenav">
   <li><a class="active" href="#about">About</a></li>
+  <li><a href="/resume.html">Research</a></li>
   <li><a href="/research.html">Research</a></li>
   <li><a href="/publications.html">Publications</a></li>
   <li><a href="/teaching.html">Teaching</a></li>
@@ -40,5 +41,6 @@ title: Joseph Tatro
   <li> njoseph.tatro@gmail.com </li>
   <li> 254-462-8245 </li>
   </ul>
+  
 </div>
 </body>
