--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Joseph Tatro
 
 <ul class="sidenav">
   <li><a class="active" href="#about">About</a></li>
-  <li><a href="/resume.html">Research</a></li>
+  <li><a href="/resume.html">Resume</a></li>
   <li><a href="/research.html">Research</a></li>
   <li><a href="/publications.html">Publications</a></li>
   <li><a href="/teaching.html">Teaching</a></li>
