--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,7 @@ title: Resume
 <div class="content">
 <h2>Resume</h2>
 
-<iframe src="https://raw.githubusercontent.com/tatron/tatron.github.io/master/NormanTatroCV.pdf" height="100%" width="75%"></iframe>
+<embed src="https://raw.githubusercontent.com/tatron/tatron.github.io/master/NormanTatroCV.pdf" height="100%" width="75%"></embed>
 
 </div>
 </body>
