--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,10 @@ title: Resume
 <div class="content">
 <h2>Resume</h2>
 
-<embed src="https://raw.githubusercontent.com/tatron/tatron.github.io/master/NormanTatroCV.pdf" height="100%" width="75%"></embed>
+<object data=”https://raw.githubusercontent.com/tatron/tatron.github.io/master/NormanTatroCV.pdf" type=”application/pdf" width=”95%” height=”95%”>
+<embed src="https://raw.githubusercontent.com/tatron/tatron.github.io/master/NormanTatroCV.pdf" type="application/pdf">
 
+</object>
+                                                                                                                         
 </div>
 </body>
