--- a/resume.html
+++ b/resume.html
@@ -14,10 +14,8 @@ title: Resume
 <div class="content">
 <h2>Resume</h2>
 
-<object data=”https://raw.githubusercontent.com/tatron/tatron.github.io/master/NormanTatroCV.pdf" type=”application/pdf" width=”95%” height=”95%”>
-<embed src="https://raw.githubusercontent.com/tatron/tatron.github.io/master/NormanTatroCV.pdf" type="application/pdf">
-
-</object>
-                                                                                                                         
+<embed src="https://raw.githubusercontent.com/tatron/tatron.github.io/master/NormanTatroCV.pdf" type="application/pdf"></embed>
+<iframe src="https://raw.githubusercontent.com/tatron/tatron.github.io/master/NormanTatroCV.pdf" width="95%" height="95%"></iframe>
+  
 </div>
 </body>
